# craftify-boilerplates

./: .gitlab-ci.yml  CLAUDE.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
api/slack-bot-cloudflare/: package.json  wrangler.toml
api/slack-bot-processor/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
api/slack-bot-processor/src/: index.ts
api/slack-bot-processor/src/lib/: slack.ts
api/slack-bot-processor/src/processors/: document.ts  index.ts  registry.ts
bot/slack-processor-python/: .env.example  README.md  docker-compose.yml
bot/slack-processor-python-node/: .dockerignore  .gitignore  Dockerfile  SETUP.md  pyproject.toml
bot/slack-processor-python-node/src/: main.py
bot/slack-processor-python-node/src/handlers/: __init__.py  message.py
bot/slack-processor-python-node/src/processors/: document.py
bot/slack-processor-python/src/handlers/: file.py
bot/slack-processor-python/src/lib/: __init__.py  guards.py
bot/slack-processor-ts/: package.json  tsconfig.json
bot/slack-processor-ts-cloudflare/: SETUP.md  schema.sql  tsconfig.json
bot/slack-processor-ts-cloudflare/src/: index.ts
bot/slack-processor-ts-node/: README.md  SETUP.md
web/react-router-spa/: package.json
web/react-router-spa-cloudflare/: README.md
web/react-router-ssr/: README.md  package.json
web/react-router-ssr-cloudflare/: README.md  wrangler.toml
web/tanstack-router-spa/: package.json
web/tanstack-start-ssr/: .dockerignore  .gitignore  Dockerfile  package.json  vite.config.ts
web/tanstack-start-ssr/src/: vite-env.d.ts
(+19 files in other folders)
